--- a/redirect/index.html
+++ b/redirect/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="google-site-verification" content="KW5WvKOYbSC7X7ZY_AggsCO0NNp3Cvbx5Qfbb8JNDUk" />
   <title>Redirecting...</title>
   <script>
     window.location.href = "https://palevioletred-mink-242777.hostingersite.com/dashboard";
@@ -11,3 +12,4 @@
   <p>If you are not redirected automatically, <a href="https://palevioletred-mink-242777.hostingersite.com/dashboard">click here</a>.</p>
 </body>
 </html>
+
