--- a/redirect/index.html
+++ b/redirect/index.html
@@ -13,8 +13,9 @@
   <script>
     const button = document.getElementById('redirectBtn');
     button.addEventListener('click', () => {
-      window.location.href = "https://your-target-page.com";
+      window.location.href = "https://palevioletred-mink-242777.hostingersite.com/dashboard";
     });
   </script>
 </body>
 </html>
+
